added some mechanics